# mod_authn_jwt

./: CMakeLists.txt  CMakeLists.txt.patch  Dockerfile  LICENSE  README.md  auth.conf  autoconf.patch  docker-compose.yaml  meson.patch  mod_authn_jwt.c  publickey.crt
.github/workflows/: ci.yml
conf.d/: 000-default.conf
integration-test/: auth.conf  docker-compose.yaml  readme.md  test.sh
integration-test/client/: Dockerfile
integration-test/client/tests/: hosts.py  keys.py  test_host.py  test_jwt.py  test_scheme.py
integration-test/keygen/: Dockerfile  generate-keys.sh
